made 64x64 patient and orbit masks

--- a/protyping/auto-segmentation/sb/04-mini-data/042-saving-minified.ipynb
+++ b/protyping/auto-segmentation/sb/04-mini-data/042-saving-minified.ipynb
@@ -13,6 +13,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "import imageio\n",
     "from skimage import transform\n",
     "\n",
     "from IPython import display"
@@ -184,52 +185,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_index = np.where(np.logical_and(x_grid>=xlim[0], x_grid<=xlim[1]))[0]\n",
-    "y_index = np.where(np.logical_and(y_grid>=ylim[0], y_grid<=ylim[1]))[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(y_index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "16 * 32"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(x_index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(x_grid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "scaled_input_array = tf.convert_to_tensor(transform.downscale_local_mean(input_array, (16, 16, 1)))\n",
     "scaled_output_array = tf.convert_to_tensor(transform.downscale_local_mean(output_array, (16, 16, 1)))"
    ]
@@ -259,7 +214,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# new_image"
+    "max_hu = 4095\n",
+    "min_hu = 0"
    ]
   },
   {
@@ -268,7 +224,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.shape(new_image)"
+    "new_input_array = scaled_input_array.numpy()[:, :, 0]\n",
+    "new_input_array[new_input_array > max_hu] = max_hu"
    ]
   },
   {
@@ -277,7 +234,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.pcolormesh(x_grid, y_grid, input_array[:, :, 0], shading=\"nearest\")"
+    "hu_scale = (max_hu + 1) / 256\n",
+    "hu_scale"
    ]
   },
   {
@@ -286,7 +244,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(new_image)"
+    "hu_scaled_to_uint8 = (new_input_array / hu_scale).astype(np.uint8)\n",
+    "hu_scaled_to_uint8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masks_scaled_to_uint8 = ((scaled_output_array.numpy() + 1)/2 * 255).astype(np.uint8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imageio.imwrite(f'{ct_uid}_image.png', hu_scaled_to_uint8)\n",
+    "imageio.imwrite(f'{ct_uid}_mask.png', masks_scaled_to_uint8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaled_input_array"
    ]
   }
  ],
