--- a/protyping/auto-segmentation/sb/04-mini-data/043-batch-saving-minified.ipynb
+++ b/protyping/auto-segmentation/sb/04-mini-data/043-batch-saving-minified.ipynb
@@ -13,6 +13,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "import imageio\n",
     "from skimage import transform\n",
     "\n",
     "from IPython import display"
@@ -170,12 +171,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ct_uid, x_grid, y_grid, input_array, output_array in dataset.take(1):\n",
+    "max_hu = 4095\n",
+    "min_hu = 0\n",
+    "\n",
+    "hu_scale = (max_hu + 1) / 256\n",
+    "\n",
+    "dimension_downscale = int(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for ct_uid, x_grid, y_grid, input_array, output_array in dataset:\n",
     "    ct_uid = ct_uid.numpy().decode()\n",
     "    \n",
     "    display.display(display.Markdown(f\"## {ct_uid}\"))\n",
     "    diagnostic_plotting(x_grid, y_grid, input_array, output_array)\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    \n",
+    "    \n",
+    "    scaled_input_array = tf.convert_to_tensor(transform.downscale_local_mean(input_array, (dimension_downscale, dimension_downscale, 1)))\n",
+    "    scaled_output_array = tf.convert_to_tensor(transform.downscale_local_mean(output_array, (dimension_downscale, dimension_downscale, 1)))\n",
+    "    \n",
+    "    new_x_grid = tf.convert_to_tensor(x_grid[dimension_downscale//2::dimension_downscale])\n",
+    "    new_y_grid = tf.convert_to_tensor(y_grid[dimension_downscale//2::dimension_downscale])\n",
+    "    \n",
+    "    diagnostic_plotting(new_x_grid, new_y_grid, scaled_input_array, scaled_output_array)\n",
+    "    plt.show()\n",
+    "    \n",
+    "    new_input_array = scaled_input_array.numpy()[:, :, 0]\n",
+    "    new_input_array[new_input_array > max_hu] = max_hu\n",
+    "    \n",
+    "    hu_scaled_to_uint8 = (new_input_array / hu_scale).astype(np.uint8)\n",
+    "    masks_scaled_to_uint8 = ((scaled_output_array.numpy() + 1)/2 * 255).astype(np.uint8)\n",
+    "    \n",
+    "    plt.imshow(hu_scaled_to_uint8)\n",
+    "    plt.show()\n",
+    "    plt.imshow(masks_scaled_to_uint8)\n",
+    "    plt.show()\n",
+    "    \n",
+    "    imageio.imwrite(f'{ct_uid}_image.png', hu_scaled_to_uint8)\n",
+    "    imageio.imwrite(f'{ct_uid}_mask.png', masks_scaled_to_uint8)"
    ]
   },
   {
@@ -183,111 +222,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "x_index = np.where(np.logical_and(x_grid>=xlim[0], x_grid<=xlim[1]))[0]\n",
-    "y_index = np.where(np.logical_and(y_grid>=ylim[0], y_grid<=ylim[1]))[0]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "len(y_index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "16 * 32"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(x_index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(x_grid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scaled_input_array = tf.convert_to_tensor(transform.downscale_local_mean(input_array, (16, 16, 1)))\n",
-    "scaled_output_array = tf.convert_to_tensor(transform.downscale_local_mean(output_array, (16, 16, 1)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_x_grid = tf.convert_to_tensor(x_grid[8::16])\n",
-    "new_y_grid = tf.convert_to_tensor(y_grid[8::16])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diagnostic_plotting(new_x_grid, new_y_grid, scaled_input_array, scaled_output_array)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# new_image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.shape(new_image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.pcolormesh(x_grid, y_grid, input_array[:, :, 0], shading=\"nearest\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(new_image)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
