include the whole patient
Former-commit-id: b6e8aa258b9866bed85a3a000f7dc4d1c0f4cffd

--- a/protyping/auto-segmentation/sb/04-mini-data/043-batch-saving-minified.ipynb
+++ b/protyping/auto-segmentation/sb/04-mini-data/043-batch-saving-minified.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import json\n",
     "import pathlib\n",
     "import random\n",
@@ -17,6 +18,18 @@
     "from skimage import transform\n",
     "\n",
     "from IPython import display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    os.mkdir('data')\n",
+    "except FileExistsError:\n",
+    "    pass"
    ]
   },
   {
@@ -74,9 +87,7 @@
     "# and testing\n",
     "filters = {\n",
     "    \"study_set_must_have_all_of\": structures_to_learn,\n",
-    "    \"slice_at_least_one_of\": [\n",
-    "        'lens_left', 'lens_right', 'eye_left', 'eye_right'\n",
-    "    ],\n",
+    "    \"slice_at_least_one_of\": None,\n",
     "    \"slice_must_have\": ['patient'],\n",
     "    \"slice_cannot_have\": []\n",
     "}"
@@ -213,23 +224,9 @@
     "    plt.imshow(masks_scaled_to_uint8)\n",
     "    plt.show()\n",
     "    \n",
-    "    imageio.imwrite(f'{ct_uid}_image.png', hu_scaled_to_uint8)\n",
-    "    imageio.imwrite(f'{ct_uid}_mask.png', masks_scaled_to_uint8)"
+    "    imageio.imwrite(f'data/{ct_uid}_image.png', hu_scaled_to_uint8)\n",
+    "    imageio.imwrite(f'data/{ct_uid}_mask.png', masks_scaled_to_uint8)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
