fix contour level issue

--- a/protyping/auto-segmentation/sb/04-mini-data/048-display-and-explore-mini-lung.ipynb
+++ b/protyping/auto-segmentation/sb/04-mini-data/048-display-and-explore-mini-lung.ipynb
@@ -12,6 +12,7 @@
     "import collections\n",
     "import warnings\n",
     "\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import imageio\n",
     "\n",
@@ -94,6 +95,9 @@
    "outputs": [],
    "source": [
     "def get_contours_from_mask(mask, contour_level=128):\n",
+    "    if np.max(mask) < contour_level:\n",
+    "        return []\n",
+    "    \n",
     "    with warnings.catch_warnings():\n",
     "        warnings.simplefilter(\"ignore\", UserWarning)\n",
     "        fig, ax = plt.subplots()\n",
