create a nifti version of the mini-lung dataset

--- a/protyping/auto-segmentation/sb/04-mini-data/048-display-and-explore-mini-lung.ipynb
+++ b/protyping/auto-segmentation/sb/04-mini-data/048-display-and-explore-mini-lung.ipynb
@@ -25,8 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://github.com/pymedphys/data/releases/download/mini-lung/mini-lung-medical-decathlon.zip'\n",
-    "filename = url.split('/')[-1]"
+    "# url = 'https://github.com/pymedphys/data/releases/download/mini-lung/mini-lung-medical-decathlon.zip'\n",
+    "# filename = url.split('/')[-1]"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "request.urlretrieve(url, filename)"
+    "# request.urlretrieve(url, filename)"
    ]
   },
   {
@@ -53,8 +53,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with zipfile.ZipFile(filename, 'r') as zip_ref:\n",
-    "    zip_ref.extractall(data_path)"
+    "# with zipfile.ZipFile(filename, 'r') as zip_ref:\n",
+    "#     zip_ref.extractall(data_path)"
    ]
   },
   {
@@ -120,11 +120,11 @@
     "    mask = image_mask_pairs[patient_label][chosen_slice][1]\n",
     "\n",
     "    plt.figure(figsize=(10,10))\n",
-    "    plt.imshow(image)\n",
+    "    plt.imshow(image, vmin=0, vmax=100)\n",
     "\n",
     "    contours = get_contours_from_mask(mask)\n",
     "    for contour in contours:\n",
-    "        plt.plot(*contour.T, 'k')"
+    "        plt.plot(*contour.T, 'r', lw=3)"
    ]
   },
   {
@@ -156,11 +156,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Issue with how matplotlib interprets small masks\n",
-    "# Need to get to the bottom of this, or use a different tool for mask --> contour\n",
-    "display('lung_003', 138)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
