add nnUNet example

--- a/protyping/auto-segmentation/sb/04-mini-data/052-shrink-and-leave-in-current-format.ipynb
+++ b/protyping/auto-segmentation/sb/04-mini-data/052-shrink-and-leave-in-current-format.ipynb
@@ -117,7 +117,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gen = get_filepaths_for_task(task)\n",
     "image_path, label_path = next(gen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = nibabel.load(image_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dict(image.header)"
    ]
   },
   {
@@ -184,6 +203,13 @@
     "    nibabel.save(new_image, new_image_path)\n",
     "    nibabel.save(new_label, new_label_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
