make shrink work in colab

--- a/protyping/auto-segmentation/sb/04-mini-data/052-shrink-and-leave-in-current-format.ipynb
+++ b/protyping/auto-segmentation/sb/04-mini-data/052-shrink-and-leave-in-current-format.ipynb
@@ -3,7 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "i3T7QXbVbc5A"
+   },
+   "outputs": [],
+   "source": [
+    "!pip install nilearn\n",
+    "!pip install pymedphys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "hKnOcfz8bQ1C"
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -27,19 +41,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "Od9r7s-3bQ1F"
+   },
    "outputs": [],
    "source": [
     "download_root = pymedphys._config.get_config_dir().joinpath('data', 'medical-decathlon')\n",
     "download_root.mkdir(exist_ok=True, parents=True)\n",
     "\n",
-    "hash_path = download_root.joinpath('hashes.json')"
+    "hash_path = download_root.joinpath('hashes.json')\n",
+    "\n",
+    "if not hash_path.exists():\n",
+    "    with open(hash_path, \"w\") as f:\n",
+    "        f.write(\"{}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "Tr1kS1aTbQ1I"
+   },
    "outputs": [],
    "source": [
     "base_download_url = 'https://github.com/pymedphys/data/releases/download'"
@@ -48,7 +70,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "eK75teD3bQ1M"
+   },
    "outputs": [],
    "source": [
     "def get_metadata(task):\n",
@@ -68,7 +92,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "OetEXoVRbQ1O"
+   },
    "outputs": [],
    "source": [
     "def download_task_path(task, path):\n",
@@ -96,7 +122,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "e4IpiaeSbQ1Q"
+   },
    "outputs": [],
    "source": [
     "task = 'Task06_Lung'"
@@ -105,7 +133,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "k6mLfP0BbQ1S"
+   },
    "outputs": [],
    "source": [
     "dimension_downscale = int(8)"
@@ -114,7 +144,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "O9_RMtsKbQ1V"
+   },
    "outputs": [],
    "source": [
     "gen = get_filepaths_for_task(task)\n",
@@ -124,7 +156,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "oj7grl7bbQ1X"
+   },
    "outputs": [],
    "source": [
     "image = nibabel.load(image_path)"
@@ -133,7 +167,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "aHOcjMJLbQ1Z"
+   },
    "outputs": [],
    "source": [
     "# dict(image.header)"
@@ -142,7 +178,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "Z3tGbxf8bQ1b"
+   },
    "outputs": [],
    "source": [
     "download_root = image_path.parent.parent.parent\n",
@@ -159,7 +197,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "J444AviHbQ1d"
+   },
    "outputs": [],
    "source": [
     "gen = get_filepaths_for_task(task)\n",
@@ -207,12 +247,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "z__dg1gobQ1g"
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "Copy of 052-shrink-and-leave-in-current-format.ipynb",
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "pymedphys-master",
    "language": "python",
@@ -232,5 +279,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 0
 }
