finish mini nnet for now
Former-commit-id: aa90e6906d54f4ae0706624d6ae3e5a3686a3c4e

--- a/protyping/auto-segmentation/sb/04-mini-data/057-shrink-brain.ipynb
+++ b/protyping/auto-segmentation/sb/04-mini-data/057-shrink-brain.ipynb
@@ -115,7 +115,7 @@
    },
    "outputs": [],
    "source": [
-    "task = 'Task06_Lung'"
+    "task = 'Task01_BrainTumour'"
    ]
   },
   {
@@ -155,6 +155,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image.affine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "aHOcjMJLbQ1Z"
    },
@@ -172,7 +190,7 @@
    "outputs": [],
    "source": [
     "download_root = image_path.parent.parent.parent\n",
-    "new_root = download_root.joinpath(\"shrunk-data-without-small-tumour\")\n",
+    "new_root = download_root.joinpath(\"shrunk-data\")\n",
     "new_task_dir = new_root.joinpath(task)\n",
     "new_task_dir.mkdir(exist_ok=True, parents=True)\n",
     "\n",
@@ -218,14 +236,17 @@
     "        interpolation='nearest'\n",
     "    )\n",
     "    \n",
+    "    print(f\"{image.shape} --> {new_image.shape}\")\n",
+    "    print(f\"{image.affine}\\n  -->\\n{new_image.affine}\")\n",
     "    \n",
     "    \n",
-    "    print(np.max(new_label.get_fdata()))\n",
-    "    print(np.sum(new_label.get_fdata()))\n",
     "    \n",
-    "    if np.sum(new_label.get_fdata()) < 100:\n",
-    "        print('skipped')\n",
-    "        continue\n",
+    "#     print(np.max(new_label.get_fdata()))\n",
+    "#     print(np.sum(new_label.get_fdata()))\n",
+    "    \n",
+    "#     if np.sum(new_label.get_fdata()) < 100:\n",
+    "#         print('skipped')\n",
+    "#         continue\n",
     "    \n",
     "    new_image_path = new_root.joinpath(image_path.relative_to(download_root))\n",
     "    new_image_path.parent.mkdir(exist_ok=True, parents=True)\n",
